--- a/.gitignore
+++ b/.gitignore
@@ -155,7 +155,7 @@ cython_debug/
 .idea/
 
 # File struct file for mac
-.DS_Store
+**/.DS_Store
 
 # # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
