--- a/server/environment.yml
+++ b/server/environment.yml
@@ -19,10 +19,11 @@ dependencies:
   - xz=5.4.2
   - zlib=1.2.13
   - pip:
-      - alembic==1.12.0
+    - alembic==1.12.1
       - attrs==23.1.0
       - blinker==1.6.2
       - certifi==2023.7.22
+      - cffi==1.16.0
       - charset-normalizer==3.3.2
       - click==8.1.7
       - colorama==0.4.6
@@ -39,6 +40,7 @@ dependencies:
       - outcome==1.3.0.post0
       - packaging==23.2
       - psycopg2==2.9.9
+      - pycparser==2.21
       - pysocks==1.7.1
       - python-dotenv==1.0.0
       - requests==2.31.0
@@ -46,10 +48,10 @@ dependencies:
       - sniffio==1.3.0
       - sortedcontainers==2.4.0
       - sqlalchemy==2.0.21
+      - tqdm==4.66.1
       - trio==0.23.1
       - trio-websocket==0.11.1
       - typing-extensions==4.8.0
       - urllib3==2.0.7
-      - webdriver-manager==4.0.1
       - werkzeug==3.0.0
       - wsproto==1.2.0
